force-app/main/default/objects/Call_Log__c/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Voice Mail</fullName>
            </value>
            <value>
                <fullName>Call backs</fullName>
            </value>
            <value>
                <fullName>Appointments</fullName>
            </value>
            <value>
                <fullName>2nd Meetings</fullName>
            </value>
            <value>
                <fullName>Demo/Trial</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>