force-app/main/default/objects/Call_Log__c/fields/Cook_Book__c.field-meta.xml
<CustomField>
    <fullName>Cook_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cook Book</label>
    <referenceTo>Cook_Book__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>