force-app/main/default/objects/Call_Log__c/fields/Twilio_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Call_Id__c</fullName>
    <label>Twilio Call Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>