force-app/main/default/objects/Call_Log__c/listViews/call_log.listView-meta.xml
<ListView>
    <fullName>call_log</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>call log</label>
</ListView>